# To-Do-List

./: CMakeLists.txt
core/: CMakeLists.txt  main.cpp  modelInterface.cpp  modelInterface.h  toDoModel.cpp  toDoModel.h
core/resources/icons/: resources.qrc
core/resources/qml/: ButtonItem.qml  RoundButton.qml  TaskList.qml  Theme.qml  UserEntry.qml  main.qml  resources.qrc
icons/: resources.qrc
qml/: ButtonItem.qml  CMakeLists.txt  Task.qml  main.qml
